package br.unitins.topicos1.brincos.dto;

public record CorDTO(
    String nome
) {}
