package br.unitins.topicos1.brincos.dto;

public record FormatoDTO(
    String nome
) {}
