package br.unitins.topicos1.brincos.dto;

public record MaterialDTO(
    String nome
) {}
